# cse335-intellij-plugin

./: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
image/: pluginIcon.ai
src/main/java/com/github/charlesowen/cse335intellijplugin/: PopupDialogAction.java
src/main/java/edu/msu/cbowen/cse335intellijplugin/: APIResponse.java  APIValue.java  AboutAction.java  AboutPluginDlg.form  AboutPluginDlg.java  AppSettingForm.form  AppSettingsComponent.java  AppSettingsConfigurable.java  AppSettingsState.java  ComparableVersion.java  Connection.java  DirectoryToZip.java  Errors.java  ExportOrSubmitAction.java  ExportToZipAction.java  ExportWarningDlg.java  Hasher.java  LoginAction.java  LoginDlg.form  LoginDlg.java  LogoutAction.java  MultipartUtility.java  MyConsole.java  OpenSubmissions.java  OpenSubmissionsDlg.java  PopupDialogAction.java  SanityAction.java  SanityCheck.java  SanityIncludeCycleCheck.java  SanityWindow.java  SanityWindowFactory.java  SectionSelectDlg.java  SubmitAction.java
src/test/resources/example-clion/: CMakeLists.txt  Doxyfile.doxy  main.cpp  pch.h
src/test/resources/example-clion/AquariumLib/: Aquarium.cpp  Aquarium.h  AquariumApp.cpp  AquariumApp.h  AquariumView.cpp  AquariumView.h  CMakeLists.txt  FishAngel.cpp  FishAngel.h  FishBeta.cpp  FishBeta.h  FishCarp.cpp  FishCarp.h  FishNemo.cpp  FishNemo.h  Item.cpp  Item.h  MainFrame.cpp  MainFrame.h  ids.h
src/test/resources/example-clion/Tests/: AquariumTest.cpp  CMakeLists.txt  FishBetaTest.cpp  ItemTest.cpp
(+8 files in other folders)
